# stac-fastapi-geoparquet

./: .env.local  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
data/: README.md  collections.json  config.toml  naip-10.parquet  naip.parquet  openaerialmap-10.parquet  openaerialmap.parquet
docs/: index.md
docs/overrides/stylesheets/: extra.css
infrastructure/aws/: .env.local  app.py  config.py  package-lock.json  package.json
infrastructure/aws/lambda/: Dockerfile  handler.py
scripts/: dev  format  generate-collections  install  lint  test  validate
src/stac_fastapi/geoparquet/: __init__.py  api.py  client.py  filters.py  main.py  models.py  search.py  settings.py
tests/: conftest.py  test_api.py  test_collections.py  test_get_item.py  test_items.py  test_root.py  test_search.py
